--- a/frontend/src/Components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/Components/ExploreMenu/ExploreMenu.css
@@ -47,4 +47,12 @@
 .explore-menu hr{
     margin: 10px 0px;
     height: 2px;
+    background-color: #e2e2e2;
+    border: none ;
+}
+
+.explore-menu-list-item .active{
+    border: 4px solid tomato;
+    padding: 2px;
+    
 }
